@@ -601,7 +601,7 @@ Here, we have a Pentium III running at 800MHz, and we want to look at where data
 references are happening most, and also get results for CPU time.
 </para>
 <screen>
-# opcontrol --event=CPU_CLK_UNHALTED:400000:0:1:1 --event=DATA_MEM_REFS:10000:0:1:1
+# opcontrol --event=CPU_CLK_UNHALTED:400000 --event=DATA_MEM_REFS:10000
 # opcontrol --vmlinux=/boot/2.5.66/vmlinux
 # opcontrol --start
 </screen>
@@ -615,7 +615,7 @@ Here, we have an Intel laptop without support for performance counters, running 
 <screen>
 # op_help -r
 CPU with RTC device
-# opcontrol --vmlinux=/boot/2.5.66/vmlinux --event=RTC_INTERRUPTS:1024:0:1:1
+# opcontrol --vmlinux=/boot/2.5.66/vmlinux --event=RTC_INTERRUPTS:1024
 # opcontrol --start
 </screen>
 </sect3>
@@ -686,22 +686,27 @@ You can pass multiple event specifications. OProfile will allocate
 hardware counters as necessary. Note that some combinations are not
 allowed by the CPU; running <command>opcontrol --list-events</command> gives the details
 of each event. The event specification is a colon-separated string
-of the form <option><emphasis>name</emphasis>:<emphasis>count</emphasis>:<emphasis>unit mask</emphasis>:<emphasis>kernel</emphasis>:<emphasis>user</emphasis></option> as described in this table:
+of the form <option><emphasis>name</emphasis>:<emphasis>count</emphasis>:<emphasis>unitmask</emphasis>:<emphasis>kernel</emphasis>:<emphasis>user</emphasis></option> as described in this table:
 </para>
 <informaltable frame="all">
 <tgroup cols='2'> 
 <tbody>
 <row><entry><option>name</option></entry><entry>The symbolic event name, e.g. <constant>CPU_CLK_UNHALTED</constant></entry></row>
 <row><entry><option>count</option></entry><entry>The counter reset value, e.g. 100000</entry></row>
-<row><entry><option>unit mask</option></entry><entry>The unit mask, as given in the events list, e.g. 0x0f</entry></row>
+<row><entry><option>unitmask</option></entry><entry>The unit mask, as given in the events list, e.g. 0x0f</entry></row>
 <row><entry><option>kernel</option></entry><entry>Whether to profile kernel code</entry></row>
 <row><entry><option>user</option></entry><entry>Whether to profile userspace code</entry></row>
 </tbody>
 </tgroup>
 </informaltable>
 <para>
+The last three values are optional, if you omit them (e.g. <option>--event=DATA_MEM_REFS:30000</option>),
+they will be set to the default values (a unit mask of 0, and profiling both kernel and
+userspace code). Note that some events require a unit mask.
+</para>
+<para>
 If OProfile is using RTC mode, and you want to alter the default counter value,
-you can use something like <option>--event=RTC_INTERRUPTS:2048:0:1:1</option>. Note the last
+you can use something like <option>--event=RTC_INTERRUPTS:2048</option>. Note the last
 three values here are ignored.
 If OProfile is using timer-interrupt mode, there is no configuration possible.
 </para>
@@ -820,7 +825,7 @@ two.
 Setting the value from the GUI should be straightforward. On the command line, you need to specify the
 event to <command>opcontrol</command>, e.g. :
 </para>
-<para><command>opcontrol --event=RTC_INTERRUPTS:256:0:1:1</command></para>
+<para><command>opcontrol --event=RTC_INTERRUPTS:256</command></para>
 </sect2>
 
 <sect2 id="timer">
